src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Guest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ゲスト</label>
        <referenceTo>Guest__c</referenceTo>
        <relationshipLabel>アンケート</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>評価</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <label>セッション</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>アンケート</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>アンケート</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>SVY-{00000000}</displayFormat>
        <label>アンケート番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>